--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,57 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+// ======================================
+// END RESET
+// ======================================
+
+.col-b > *  {
+  margin-left: 25px;
+}
+
 @font-face {
   font-family: proxreg;
   src: url('/fonts/ProximaNova-Reg.ttf');
@@ -17,6 +71,7 @@
   box-sizing: border-box;
 }
 
+
 html,
 body,
 .wrapper, {
@@ -24,13 +79,79 @@ body,
 }
 
 body {
-  background-color: #42444E;
+  background-color: #222222;
   font-family: proxreg;
+  font-size: 1em;
+}
+
+h1, h2 ,h3 {
+  color: rgb(44, 47, 42);
+}
+
+h1 {
+  font-size: 3.998em;
+  margin: 0 25px 0 0;
+}
+
+h2 {
+  font-size: 2.827em;
+  margin: 0 25px 0 0;
+}
+
+h3 {
+  font-size: 1.999em;
+  margin: 0 25px 0 0;
+}
+
+h4 {
+  font-size: 1.414em;
+  margin: 0 25px 0 0;
+}
+
+hr {
+  margin-bottom: 25px;
+}
+
+ol li {
+  list-style-type: decimal;
+  margin-left: 25px;
+}
+
+pre {
+  margin: 0 25px!important;
+  margin-bottom: 25px!important;
+}
+
+img {
+  margin: 25px 0;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+a {
+	text-decoration: none;
+}
+
+
+
+.col-a a:visited {
+	color: white;
+}
+
+
+
+.col-b p > code {
+  font-family: monospace;
+  background-color: #ccc;
+}
+
+p.highlight > code {
+	background-color: inherit;
 }
 
 .col-a {
 width: 20%;
-background-color: #42444E;
+background-color: #222222;
 float: left;
 }
 
@@ -61,9 +182,7 @@ float: left;
       padding: 5px 0;
       line-height: 1.5;
       a {
-        text-decoration: none;
         color: white;
-        margin-left: 20px;
       }
     }
   }
@@ -71,21 +190,287 @@ float: left;
 
 
 nav > ul > li {
-  color: #222;
+  color: rgb(35, 148, 60);
   font-size: 1.5em;
   margin: 10px 0;
   font-family: proxbold;
 }
 
+li + ul li {
+  margin-left: 20px;
+}
 
 
 // ===================================
 // CONTENT AREA
 // ===================================
 .col-b {
-  height: 3500px;
   line-height: 2;
+  padding-top: 125px;
   p {
-    margin: 1em;
+    margin: .8em 25px;
+    line-height: 1.5;
+    width: 70%;
   }
+  ol, ul {
+    color: rgb(16, 142, 164);
+    font-family: proxbold;
+  }
+
+}
+
+p.highlight {
+  color: rgb(255, 45, 45);
+  background-color: #fcf883;
+  padding: 5px;
+  font-family: proxbold;
+  font-size: 1.1em;
+  display: inline-block;
+  width: 100%;
+  margin-left: 0px;
+}
+
+
+// ==========================
+// STYLES FOR DEMONSTRATION
+// ==========================
+
+.inline {
+  display: inline;
+  background-color: #ccc;
+}
+
+.remove-inline-spacing {
+  margin-right: -4px;
+}
+
+.inline-block {
+  display: inline-block;
+  background-color: rgb(45, 59, 255);
+  border-radius: 5px;
+  a {
+    color: white;
+    text-decoration: none;
+    font-family: proxreg;
+    display: block;
+    padding: 10px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript */
+/**
+ * prism.js default theme for JavaScript, CSS and HTML
+ * Based on dabblet (http://dabblet.com)
+ * @author Lea Verou
+ */
+
+code[class*="language-"],
+pre[class*="language-"] {
+	color: white;
+	// text-shadow: 0 1px white;
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	direction: ltr;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	word-wrap: normal;
+	line-height: 1.5;
+
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
+}
+
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+	text-shadow: none;
+	background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+code[class*="language-"]::selection, code[class*="language-"] ::selection {
+	text-shadow: none;
+	background: #b3d4fc;
+}
+
+@media print {
+	code[class*="language-"],
+	pre[class*="language-"] {
+		text-shadow: none;
+	}
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+	padding: 1em;
+	margin: .5em 0;
+	overflow: auto;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+	background: #222;;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+	padding: .1em;
+	border-radius: .3em;
+	white-space: normal;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+	color: slategray;
+}
+
+.token.punctuation {
+	color: #999;
+}
+
+.namespace {
+	opacity: .7;
+}
+
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+	color: #38b8e0;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+	color: #690;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+	color: #a67f59;
+	background: hsla(0, 0%, 100%, .5);
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+	color: #07a;
+}
+
+.token.function {
+	color: #DD4A68;
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+	color: #e90;
+}
+
+.token.important,
+.token.bold {
+	font-weight: bold;
+}
+.token.italic {
+	font-style: italic;
+}
+
+.token.entity {
+	cursor: help;
 }
